Premium landing page + branded studio with logo fixes

--- a/public/studio.html
+++ b/public/studio.html
@@ -287,7 +287,7 @@
             position: absolute;
             width: 70px;
             height: 70px;
-            background-image: url('Ampd_Image_logo.jpg');
+            background-image: url('AMP_d_Images_logo.png');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
@@ -943,7 +943,7 @@
                                     </div>
                                 </div>
                                 <div class="loading-tip">
-                                    <strong>💡 Tip:</strong> Claude is analyzing colors, lighting, composition, and visual elements.
+                                    <strong>💡 Tip:</strong> AMP'd AI analyzes colors, lighting, composition, and visual elements.
                                 </div>
                             </div>
                         </div>
@@ -1170,10 +1170,10 @@
             
             const stages = [
                 { progress: 20, message: 'Uploading your image...' },
-                { progress: 40, message: 'Connecting to Claude AI...' },
-                { progress: 60, message: 'Analyzing visual elements...' },
+                { progress: 40, message: 'Extracting visual DNA...' },
+                { progress: 60, message: 'AMP'd AI processing...' },
                 { progress: 80, message: 'Extracting colors and lighting...' },
-                { progress: 95, message: 'Applying insights to settings...' }
+                { progress: 95, message: 'Analysis complete ✨' }
             ];
             
             if (stage < stages.length) {
