Fix JavaScript syntax error in studio.html

--- a/public/studio.html
+++ b/public/studio.html
@@ -1171,7 +1171,7 @@
             const stages = [
                 { progress: 20, message: 'Uploading your image...' },
                 { progress: 40, message: 'Extracting visual DNA...' },
-                { progress: 60, message: 'AMP'd AI processing...' },
+                { progress: 60, message: "AMP'd AI processing..." },
                 { progress: 80, message: 'Extracting colors and lighting...' },
                 { progress: 95, message: 'Analysis complete ✨' }
             ];
